css/media-queries.css
* {
    margin: .5em;
    font-family: sans-serif, Helvetica;
    box-sizing: border-box;
}
body {
    margin: 0 auto;
    padding: 0;
}
li {
    list-style-type: none;
    padding: .25em;
}
.nav-links {
    display: flex;
}
.hidden-on-desktop {
    display: none;
}
.sub-section {
    font-style: italic;
}

@media screen and (min-width: 300px) and (max-width:600px) {
    .alert-info>a {
        text-decoration: none;
        color: black;
        padding: 10px;
        font-weight: lighter;
    }
    .alert-info {
        display: flex;
        justify-content: center;
        background-color: #D7FEFE;
        border: solid #CFCFCF;
    }
    h1 {
        display: flex;
        justify-content: center;
        font-size: 4em;
    }
    li {
        display: flex;
        justify-content: center;
    }
    .nav-links {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    nav ul{
        display: flex;
        justify-content: flex-start;
        align-items: center;
        margin: 0;
        padding: 0;
    }
    nav ul li{
        background: lightgrey;
        width: 100%;
        margin: 5px;
        padding-top: .75em;
        padding-bottom: .75em;
        font-size: 1.25em;
    }
    img {
        display: block;
        margin: auto;
        width: 100%;
    }
    .main {
        margin: 2em 0;
    }
    .sub-section {
        margin: 2em 0;
    }
    footer {
        margin-top: 5em;
        margin-bottom: .5em;
    }
}

@media screen and (min-width:601px) {
    .nav-links li {
        display: flex;
        align-items: flex-end;
        padding-bottom: 0;
        margin-bottom: 0;
    }
    .nav-links {
        display: flex;
        justify-content: flex-end;
        float: right;
    }
    h1 {
        float: left;
        margin: 0 0 1.5em 0;
        font-size: 2.5em;
    }
    img {
        display: block;
        margin: 0 auto 1.5em;
        width: 100%;
    }
    .main {
        float: left;
        width: calc(65% - 1em);
    }
    .sub-section {
        float: right;
        width: calc(35% - 1em);
    }
    footer {
        margin-top: 25em;
        margin-bottom: .5em;
    }
    h2 {
        margin: auto;
        padding-bottom: 1em;
    }
}

